<resources>
    <string name="app_name">SynApp</string>
    <string name="hello_message">Приложение demo-SRM</string>
    <string name="menu_profile">Мой профиль</string>
    <string name="menu_organization">Моя организация</string>
    <string name="menu_trades">Мои торги</string>
    <string name="menu_notifications">Мои уведомления</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="menu_login">Войти</string>
    <string name="menu_logout">Выйти</string>
    <string name="notification_info_title">Уведомление</string>
    <string name="push_channel_name">Push-уведомления</string>
    <string name="push_channel_description">Уведомления от серверного приложения</string>
    <string name="notifications_empty_title">Пока нет уведомлений</string>
    <string name="notifications_empty_subtitle">Когда появятся новые события, они отобразятся на этом экране.</string>
</resources>
